background fix on mobile + reformating + problem fixing

--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ h1, h2, h3, h4, h5, p {
 .cont-bd {
     background-color: #2C3639;
     text-align: center;
-    width: 40%;
+    width: 45%;
     height: 400px;
     border: 0px red;
     position: absolute;
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, p {
 .cont-bd1 {
     background-color: #2C3639;
     text-align: center;
-    width: 40%;
+    width: 45%;
     height: 400px;
     border: 0px red;
     position: absolute;
@@ -78,5 +78,5 @@ h1, h2, h3, h4, h5, p {
     border: 0px #2C3639;
     box-radius: 30px;
     border-radius: 9000px;
-    width: 200px;
+    width: 150px;
 }
